--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "adv-backend",
   "version": "1.0.0",
   "description": "Backend Course",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/index.js"
   },
   "keywords": [
     "backend"
   ],
   "author": "Anubhav Singh",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
