add user and video model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
-        "requesthandler"
+        "avater",
+        "Cloudinary",
+        "fullname",
+        "requesthandler",
+        "timestampes"
     ]
 }
