--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://anubhavxsingh:1234@5678@cluster0.1tyahed.mongodb.net
 CORS_ORIGIN = *
+ACCESS_TOKEN_SECRET=irZx4DUnNU0gmyH4LBCOJFSUARWG0dNKFN1QB5ZLVtOdUYaJpSz
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=FRShYeQgl5m16F7XAq5pRWZs8iCji9YKxisFoPlutjiyAiMkJFQ
+REFRESH_TOKEN_EXPIRY=10d
