--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,7 @@ ACCESS_TOKEN_SECRET=irZx4DUnNU0gmyH4LBCOJFSUARWG0dNKFN1QB5ZLVtOdUYaJpSz
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=FRShYeQgl5m16F7XAq5pRWZs8iCji9YKxisFoPlutjiyAiMkJFQ
 REFRESH_TOKEN_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRETE=
