Add User Controller

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "avater",
         "Cloudinary",
         "fullname",
+        "middlewares",
         "requesthandler",
         "timestampes"
     ]
